# freeswitch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
freeswitch/: __init__.py  agent.py  cli.py  client.py  config.py  models.py
tests/: test_agent.py  test_models.py
