[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fswitch-cli"
version = "0.1.0"
description = "A tiny CLI to switch and chat across free AI models with one command."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Biya-dev" }]
keywords = ["ai", "llm", "cli", "openrouter", "free-models", "chat", "nemotron", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
fswitch = "freeswitch.cli:main"

[project.urls]
Homepage = "https://github.com/Biya-dev/freeswitch"
Repository = "https://github.com/Biya-dev/freeswitch"
Issues = "https://github.com/Biya-dev/freeswitch/issues"

[tool.setuptools.packages.find]
include = ["freeswitch*"]
